# BakiBounty

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.yaml  schema.py
modules/: __init__.py  bounty.py  discovery.py  probing.py  recon.py  scanner.py  scope.py
templates/: .gitkeep
utils/: __init__.py  ai.py  helpers.py  logger.py  notify.py  report.py
